# kitmatheinfo-bot

./: .git-blame-ignore-revs  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  deny.exceptions.toml  deny.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: actionlint.yml  build-docker.yml  cargo-deny.yml  ci.yml  clippy.yml  rustfmt.yml
src/: config.rs  main.rs  moderation.rs  ophase.rs  self_management.rs  toc.rs
