[package]
name = "kitmatheinfo-bot"
authors = ["Chrisliebär <mail@chrisliebaer.de>"]
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = { version = "0.11"}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_with = "3.10.0"
toml = "0.8.19"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "time"] }
serenity = { version = "0.12", default-features = false, features = ["builder", "cache", "client", "gateway", "model", "utils", "rustls_backend", "unstable_discord_api"] }
poise = "0.6"
linked-hash-map = { version = "0.5", features = ["serde_impl"]}
