[package]
name = "kitmatheinfo-bot"
authors = ["Chrisliebär <mail@chrisliebaer.de>"]
version = "0.1.0"
license = "MIT"
edition = "2021"
repository = "https://github.com/chrisliebaer/kitmatheinfo-bot"
keywords = ["discord", "bot"]
categories = ["chatbot", "discord"]
description = "A Discord bot for the KIT Mathe/Info Discord server."

[dependencies]
log = "0.4.26"
env_logger = { version = "0.11.6"}
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.139", default-features = false, features = ["alloc"] }
serde_with = "3.12.0"
toml = "0.8.20"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "time"] }
serenity = { version = "0.12.4", default-features = false, features = ["builder", "cache", "client", "gateway", "model", "utils", "rustls_backend", "unstable_discord_api"] }
poise = "0.6.1"
linked-hash-map = { version = "0.5.6", features = ["serde_impl"]}
